--- a/ProductCatalog-Web/Areas/Admin/Views/Articles/Index.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Articles/Index.cshtml
@@ -35,7 +35,7 @@
                         <i class="fas fa-file-alt"></i> @item.Name
                     </h5>
                     <p class="text-muted"><i class="fas fa-calendar-alt"></i> @item.CreatedDate.ToShortDateString()</p>
-                    <p><span class="badge bg-info">@item.Status</span></p>
+                    <p><span class="badge bg-info" style="font-size:17px;">@item.Status</span></p>
 
                     @if (!string.IsNullOrEmpty(item.ImageUrl1))
                     {
