--- a/ProductCatalog-Web/Areas/Admin/Views/Home/GetCustomers.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Home/GetCustomers.cshtml
@@ -6,14 +6,14 @@
 
 <head><link rel="stylesheet" href="~/css/Admin/Home/getCustomers.css"/></head>
 
-<div class="container mt-5">
+<div class="container mt-5" style="width:100%">
     <h1 class="text-center mb-4">Customer List</h1>
 
     <div class="text-right mb-3">
         <a asp-action="Index" asp-controller="Role" class="btn btn-primary">Manage Roles</a>
     </div>
 
-    <div class="table-responsive">
+    <div class="table-responsive" >
         <table class="table table-bordered table-striped">
             <thead class="thead-dark">
                 <tr>
