--- a/ProductCatalog-Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Product/Index.cshtml
@@ -11,62 +11,63 @@
         <a asp-action="Create" class="btn btn-success"><i class="fas fa-plus"></i> Create New</a>
     </div>
 
-    <table class="table table-striped table-hover shadow-sm">
-        <thead class="table-dark">
-            <tr>
-                <th>Product Name</th>
-                <th>Price</th>
-                <th>Summary</th>
-                <th>Image</th>
-                <th>Category</th>
-                <th>Created Date</th>
-                <th>Status</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>@item.Name</td>
-                    <td>$@item.Price.ToString("0.00")</td>
-                    <td>@item.Summary</td>
-                    <td>
-                        <img src="~/img/@item.ImageUrl" alt="Product Image" class="img-thumbnail" style="width: 50px; height: 50px;" />
-                    </td>
-                    <td>@item.Category.Name</td>
-                    <td>@item.CreatedDate.ToString("yyyy-MM-dd")</td>
-                    @{
-                        string badgeClass = "bg-danger"; 
+    @foreach (var categoryGroup in Model.GroupBy(x => x.Category.Name))
+    {
+        <div class="category-section mt-4">
+            <h3>@categoryGroup.Key</h3>
+            <table class="table table-striped table-hover shadow-sm">
+                <thead class="table-dark">
+                    <tr>
+                        <th>Product Name</th>
+                        <th>Price</th>
+                        <th>Image</th>
+                        <th>Created Date</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in categoryGroup)
+                    {
+                        <tr>
+                            <td>@item.Name</td>
+                            <td>$@item.Price.ToString("0.00")</td>
+                            <td>
+                                <img src="~/img/@item.ImageUrl" alt="Product Image" class="img-thumbnail" style="width: 50px; height: 50px;" />
+                            </td>
+                            <td>@item.CreatedDate.ToString("yyyy-MM-dd")</td>
+                            @{
+                                string badgeClass = "bg-danger";
 
-                        switch (item.Status)
-                        {
-                            case Status.Active:
-                                badgeClass = "bg-success";
-                                break;
-                            case Status.Featured:
-                                badgeClass = "bg-warning";
-                                break;
-                        }
+                                switch (item.Status)
+                                {
+                                    case Status.Active:
+                                        badgeClass = "bg-success";
+                                        break;
+                                    case Status.Featured:
+                                        badgeClass = "bg-warning";
+                                        break;
+                                }
+                            }
+                            <td>
+                                <span class="badge @badgeClass">
+                                    @item.Status
+                                </span>
+                            </td>
+                            <td>
+                                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary btn-sm" title="Edit">
+                                    <i class="fas fa-pen"></i> Edit
+                                </a>
+                                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger btn-sm" title="Delete">
+                                    <i class="fas fa-trash"></i> Delete
+                                </a>
+                            </td>
+                        </tr>
                     }
-                    <td>
-                        <span class="badge @badgeClass">
-                            @item.Status
-                        </span>
-                    </td>
-
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary btn-sm" title="Edit">
-                            <i class="fas fa-pen"></i> Edit
-                        </a>
-                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger btn-sm" title="Delete">
-                            <i class="fas fa-trash"></i> Delete
-                        </a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+                </tbody>
+            </table>
+        </div>
+    }
 </div>
 
 @section Scripts {
