--- a/ProductCatalog-Web/Areas/ContentManager/Views/Shared/_Layout.cshtml
+++ b/ProductCatalog-Web/Areas/ContentManager/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="ContentManager" asp-controller="Home" asp-action="Index">My Products</a>
+                <a class="navbar-brand" asp-area="ContentManager" asp-controller="Home" asp-action="Index">Content Manager Panel</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="ContentManager" asp-controller="Articles" asp-action="Index">My Blogs</a>
+                            <a class="nav-link text-white" asp-area="ContentManager" asp-controller="Articles" asp-action="Index"> Blogs</a>
                         </li>
                     </ul>
                     <div class="navbar-nav">
@@ -70,7 +70,7 @@
     </header>
 
     <div class="container mt-4">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3" >
             @RenderBody()
         </main>
     </div>
