--- a/ProductCatalog-Web/Areas/CustomerRelations/Views/Questions/Edit.cshtml
+++ b/ProductCatalog-Web/Areas/CustomerRelations/Views/Questions/Edit.cshtml
@@ -18,19 +18,19 @@
                     <form asp-action="Edit">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                        <div class="form-group">
-                            <label asp-for="Question" class="control-label">Your Question</label>
+                        <div class="form-group mb-3">
+                            <label asp-for="Question" class="form-label">Your Question</label>
                             <textarea asp-for="Question" class="form-control" id="question" readonly></textarea>
                             <span asp-validation-for="Question" class="text-danger"></span>
                         </div>
 
-                        <div class="form-group">
-                            <label asp-for="Answer" class="control-label">Answer</label>
+                        <div class="form-group mb-3">
+                            <label asp-for="Answer" class="form-label">Answer</label>
                             <textarea asp-for="Answer" class="form-control" id="answer"></textarea>
                             <span asp-validation-for="Answer" class="text-danger"></span>
                         </div>
 
-                        <div class="mb-3">
+                        <div class="form-group mb-3">
                             <label asp-for="QuestionTypeId" class="form-label fw-semibold">Question Type</label>
                             <select asp-for="QuestionTypeId" class="form-select border-primary shadow-sm" asp-items="@ViewBag.QuestionTypes">
                                 <option value="">-- Select Question Type --</option>
@@ -50,6 +50,8 @@
                         <div class="form-group mb-3">
                             <label asp-for="QuestionStatus" class="form-label fw-bold"><i class="fas fa-toggle-on"></i> Question Status</label>
                             <select asp-for="QuestionStatus" class="form-select">
+                                <option value="Customer">Customer</option>
+                                <option value="CustomerRelations">Customer Relations</option>
                             </select>
                             <span asp-validation-for="QuestionStatus" class="text-danger"></span>
                         </div>
@@ -70,10 +72,10 @@
 </div>
 
 @section Scripts {
+    
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.tiny.cloud/1/1kxyrsdra6gg5wpiu45o5vpbsh5fq5glysoowx0x5zc96i0m/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="~/js/CustomerRelations/Questions/edit.js" asp-append-version="true"></script>
 }
