--- a/ProductCatalog-Web/Areas/CustomerRelations/Views/Questions/Index.cshtml
+++ b/ProductCatalog-Web/Areas/CustomerRelations/Views/Questions/Index.cshtml
@@ -1,62 +1,118 @@
 ﻿@model IEnumerable<ProductCatolog_Core.Models.Questions>
 
 @{
-    ViewData["Title"] = "Question List";
-    Layout = "_Layout";
+    ViewData["Title"] = "Questions Index";
 }
 
-<div class="container mt-5">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-        <h2 class="text-primary fw-bold">Question List</h2>
-        <a asp-action="Create" class="btn btn-success">
-            <i class="bi bi-plus-lg"></i> Create New
+<head>
+    <link href="~/css/CustomerRelations/Questions/index.css" rel="stylesheet" />
+</head>
+
+<div class="container-fluid mt-4">
+    <h1 class="text-primary mb-4"><i class="fa-solid fa-question-circle"></i> Questions Index</h1>
+
+    <div class="mb-3">
+        <a class="btn btn-success btn-lg" asp-action="Create">
+            <i class="fa-solid fa-plus"></i> Create New Question
         </a>
     </div>
 
-    <div class="card shadow-lg border-0 rounded-4">
-        <div class="card-body p-4">
-            <table class="table table-hover table-bordered align-middle">
-                <thead class="table-primary">
-                    <tr class="text-center">
-                        <th>ID</th>
-                        <th>Question</th>
-                        <th>Answer</th>
-                        <th>Question Type</th>
-                        <th>Created Date</th>
-                        <th>Question Status</th>
-                        <th>Status</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr class="text-center">
-                            <td>@Html.DisplayFor(modelItem => item.Id)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Question)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Answer)</td>
-                            <td>@item.QuestionType.Name</td>
-                            <td>@Html.DisplayFor(modelItem => item.CreatedDate)</td>
-                            <td>@Html.DisplayFor(modelItem => item.QuestionStatus)</td>
-                            <td>
-                                <span class="badge bg-@(item.Status == ProductCatolog_Core.Enums.Status.Active ? "success" : "danger")">
-                                    @Html.DisplayFor(modelItem => item.Status)
-                                </span>
-                            </td>
-                            <td>
-                                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">
-                                    <i class="bi bi-pencil-square"></i> Edit
-                                </a>
-                                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this?');">
-                                    <i class="bi bi-trash"></i> Delete
-                                </a>
-                            </td>
+    <div class="row">
+        <div class="col-lg-12 mb-4">
+            <h3 class="mt-4">Customer Questions</h3>
+            <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>@Html.DisplayNameFor(model => model.Id)</th>
+                            <th>@Html.DisplayNameFor(model => model.Question)</th>
+                            <th>@Html.DisplayNameFor(model => model.Answer)</th>
+                            <th>@Html.DisplayNameFor(model => model.QuestionStatus)</th>
+                            <th>Question Type</th>
+                            <th>@Html.DisplayNameFor(model => model.User.Email)</th>
+                            <th>@Html.DisplayNameFor(model => model.CreatedDate)</th>
+                            <th>@Html.DisplayNameFor(model => model.Status)</th>
+                            <th class="text-center">Actions</th>
                         </tr>
-                    }
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.Where(q => q.QuestionStatus == ProductCatolog_Core.Enums.QuestionStatus.Customer))
+                        {
+                            <tr>
+                                <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                                <td>@Html.DisplayFor(modelItem => item.Question)</td>
+                                <td class="answer-cell">@Html.DisplayFor(modelItem => item.Answer)</td>
+                                <td>
+                                    <span class="badge bg-info">Customer Question</span>
+                                </td>
+                                <td>@Html.DisplayFor(modelItem => item.QuestionType.Name)</td>
+                                <td>@Html.DisplayFor(modelItem => item.User.Email)</td>
+                                <td>@Html.DisplayFor(modelItem => item.CreatedDate)</td>
+                                <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                                <td class="text-center">
+                                    <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@item.Id">
+                                        <i class="fa-solid fa-edit"></i> Edit
+                                    </a>
+                                    <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">
+                                        <i class="fa-solid fa-trash"></i> Delete
+                                    </a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="col-lg-12 mb-4">
+            <h3 class="mt-4">Customer Relations Questions</h3>
+            <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>@Html.DisplayNameFor(model => model.Id)</th>
+                            <th>@Html.DisplayNameFor(model => model.Question)</th>
+                            <th>@Html.DisplayNameFor(model => model.Answer)</th>
+                            <th>@Html.DisplayNameFor(model => model.QuestionStatus)</th>
+                            <th>Question Type</th>
+                            <th>@Html.DisplayNameFor(model => model.User.Email)</th>
+                            <th>@Html.DisplayNameFor(model => model.CreatedDate)</th>
+                            <th>@Html.DisplayNameFor(model => model.Status)</th>
+                            <th class="text-center">Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.Where(q => q.QuestionStatus == ProductCatolog_Core.Enums.QuestionStatus.CustomerRelations))
+                        {
+                            <tr>
+                                <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                                <td>@Html.DisplayFor(modelItem => item.Question)</td>
+                                <td class="answer-cell">@Html.DisplayFor(modelItem => item.Answer)</td>
+                                <td>
+                                    <span class="badge bg-success">Customer Relations Question</span>
+                                </td>
+                                <td>@Html.DisplayFor(modelItem => item.QuestionType.Name)</td>
+                                <td>@Html.DisplayFor(modelItem => item.User.Email)</td>
+                                <td>@Html.DisplayFor(modelItem => item.CreatedDate)</td>
+                                <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                                <td class="text-center">
+                                    <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@item.Id">
+                                        <i class="fa-solid fa-edit"></i> Edit
+                                    </a>
+                                    <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">
+                                        <i class="fa-solid fa-trash"></i> Delete
+                                    </a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+@section Scripts {
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="~/js/CustomerRelations/Questions/index.js" asp-append-version="true"></script>
+}
